6-SLA-SLO-SLI/Задание 3/manifests/oncall/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oncall
  namespace: st-ab5-statsenko
  labels:
    app.kubernetes.io/name: oncall
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oncall
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oncall
        app.kubernetes.io/component: web
      annotations:
        sage/group: "ab5_statsenko"
    spec:
      containers:
        - name: oncall
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          image: knucksie/sre-ab-oncall:0.3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 8888
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            failureThreshold: 10
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - name: oncall-config
              mountPath: /home/oncall/config/config.yaml
              subPath: oncall.conf
              readOnly: true
      volumes:
        - name: oncall-config
          configMap:
            name: oncall
